Add quizzes strings

--- a/templates/poll/pollmain.hbs
+++ b/templates/poll/pollmain.hbs
@@ -14,7 +14,7 @@
             <a href="# ">{{getString 'Presult'}}</a>
           </li>
           <li role="presentation" id="stdPollHeader" class="navListTab"  data-content="{{getString 'poll'}}">
-            Poll
+            {{getString 'poll'}}
           </li>
 
         {{/if}}
