--- a/templates/poll/stdResult.hbs
+++ b/templates/poll/stdResult.hbs
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div id="resultLayoutBody" class="container stdlayout">
-    <label>Question : <span id="qnLabelCont">{{obj.question}}</span></label>
+    <label>{{getString 'Question'}} : <span id="qnLabelCont">{{obj.question}}</span></label>
 
     <div  class="panel">
       <div id="optnNonVotd">
