Add String for size text in wb tools

--- a/templates/whiteboard/toolbar.hbs
+++ b/templates/whiteboard/toolbar.hbs
@@ -31,7 +31,7 @@
   </div>
 
   <div id="t_strk{{cn}}" class="tool" data-tool="stroke">
-    <a href="#" data-title="{{getString 'strk'}}" class="congtooltip">Size ▾</a>
+    <a href="#" data-title="{{getString 'strk'}}" class="congtooltip">{{getString 'size'}} ▾</a>
     <ul class="strkSizeList">
         <li id="strk-1{{cn}}" data-stroke="1" class="selected"><span style="height: 1px;"></span></li>
         <li id="strk-2{{cn}}" data-stroke="3"><span style="height: 2px;"></span></li>
