--- a/css/modules/document-share.css
+++ b/css/modules/document-share.css
@@ -1010,6 +1010,7 @@
   color: #fff;
   font-size: 0.75rem;
   margin-right: 0.8125rem;
+  margin-left: 0.25rem;
 }
 
 #virtualclassCont.congrea.student #totalPages,
