Set save srting as per the language selected

--- a/templates/ppt/dashboard.hbs
+++ b/templates/ppt/dashboard.hbs
@@ -11,7 +11,7 @@
     <div id="pptuploadContainer">
       <div id="urlcontainer" style="display: block;" class="form-group">
         <input id="presentationurl" placeholder="{{getString 'EHTMLPresentUrl'}}" class="form-control">
-        <input type="submit" id="submitpurl" class ="btn-default"value="Save">
+        <input type="submit" id="submitpurl" class ="btn-default"value="{{getString 'Save'}}">
       </div>
     </div>
   </div>
