Add string for vote button

--- a/templates/poll/pollStd.hbs
+++ b/templates/poll/pollStd.hbs
@@ -18,6 +18,6 @@
     </div>
   </div>
   <div id="stdContFooter">
-    <input id="btnVote" type="button" class="btn btn-primary" value ="Vote">
+    <input id="btnVote" type="button" class="btn btn-primary" value ="{{getString 'vote'}}">
   </div>
 </div>
