Fix codacy issues

--- a/css/modules/styles.css
+++ b/css/modules/styles.css
@@ -3592,8 +3592,8 @@ div.ui-memblist-usr .userVideos {
   left: 28px;
 }
 
-#virtualclassCont.congrea #fullScreenButton .fullScreen,
-#virtualclassCont.congrea #fullScreenExitButton span {
+#virtualclassCont.congrea #virtualclassAppFooterPanel #fullScreenButton .fullScreen,
+#virtualclassCont.congrea #virtualclassAppFooterPanel #fullScreenExitButton span {
   padding: 0.6875rem 1.125rem 0.75rem 1.125rem;
   line-height: 1.25rem;
   font-size: 1.25rem;
