Update for Multi Language Translation (#1400)
* Add Portuguese Brazillian language support

* Add Strings for full screen

* Add string for recording button

* Add string for joinNow

* add string for move sidebar button

* Add string for fit to screen zoom controller

* Move all strings from chat-lang.en to lang-en

* Finalising the strings translational

* Add strings for video on off actions

* Refactoring lang.js

* Move language files to lang folder

* Using Moodle language

* Add Spanish Language(es)

* Language is not returned from the moodle

* Handling when region of language is not present in the existing congrea

* Update js Minification

* Refactoring lang.js file

* Handle unmute string that came from plugin

* Update all minification files

* Correct spelling of poll in portugues language

* Update minification

* Update Minification

* Remove dynamic string from data-audio-playing

* Dynamic string for clear all button in note

* Add String for note placeholder

* Add String for pagination

* Add Strings for poll questions placeholder

* add string for video drop message

* Add quizzes strings

* Add String for size text in wb tools

* Update Manification

* Pagination styling

* Add quizzess strings

* Make dynamic strings for next and back button in quizzess

* Set save srting as per the language selected

* Add string for vote button

* Update Minification

* Correction for Quiz/page langs files

* Add quiz result strings at student end

* Update Minification

* Add string for quiz submit

* Update minification

* Update Minification

* pass 0 when no language is passed from lms

* Fixed issues of codacy

* Fix codacy issues

* Fix codacy issues

* Update minification

* Fix codacy issues

* Update Minification

* Update css minification

Co-authored-by: uditbh <udit.bhargav@gmail.com>

--- a/css/modules/styles.css
+++ b/css/modules/styles.css
@@ -3592,6 +3592,13 @@ div.ui-memblist-usr .userVideos {
   left: 28px;
 }
 
+#virtualclassCont.congrea #virtualclassAppFooterPanel #fullScreenButton .fullScreen,
+#virtualclassCont.congrea #virtualclassAppFooterPanel #fullScreenExitButton span {
+  padding: 0.6875rem 1.125rem 0.75rem 1.125rem;
+  line-height: 1.25rem;
+  font-size: 1.25rem;
+}
+
 #virtualclassCont.congrea.student #resultLayoutBody label,
 #virtualclassCont.congrea.student #resultLayoutBody #optnNonVotd span #virtualclassCont.congrea.student #layoutPollBody span {
   font-size: 14px;
@@ -4435,13 +4442,6 @@ span#usertab_text {
   right: 3.25rem;
 }
 
-#virtualclassCont.congrea #fullScreenButton .fullScreen,
-#virtualclassCont.congrea #fullScreenExitButton [data-title="Exit Full Screen"] {
-  padding: 0.6875rem 1.125rem 0.6875rem 1.125rem;
-  line-height: 1.25rem;
-  font-size: 1.25rem;
-}
-
 #virtualclassCont.congrea #fullScreenExitButton {
   display: none;
 }
@@ -4691,7 +4691,7 @@ span#usertab_text {
   }
 
   #virtualclassCont.congrea #fullScreenButton .fullScreen,
-  #virtualclassCont.congrea #fullScreenExitButton [data-title="Exit Full Screen"] {
+  #virtualclassCont.congrea #fullScreenExitButton span.congtooltip {
     padding: 11px 18px 11.5px 18px;
   }
 
