--- a/templates/rightBarHeader.hbs
+++ b/templates/rightBarHeader.hbs
@@ -14,7 +14,7 @@
         <span class="help-icon"></span>
         {{#if isPlayMode}}
           <label class="switch viewtext" id="viewAllQuestion" data-viewall="enable">
-            <span class="slider round icon-all-audio-disable enable congtooltip cgIcon" data-title="View All">{{getString 'viewall'}}</span>
+            <span class="slider round icon-all-audio-disable enable congtooltip cgIcon" data-title="{{getString 'viewall'}}">{{getString 'viewall'}}</span>
           </label>
         {{/if}}
       </div>
