resolve all few css issues

--- a/css/modules/color.css
+++ b/css/modules/color.css
@@ -1,5 +1,5 @@
 #virtualclassCont.congrea .bootstrap .nav > li > a:hover,
 #virtualclassCont.congrea .bootstrap .nav > li > a:focus,
 #virtualclassCont.congrea .bootstrap .nav > li > a:hover:active {
-  background: #2d3741 none !important;
+  background: #2d3741 none;
 }
