--- a/css/modules/dashboard.css
+++ b/css/modules/dashboard.css
@@ -207,10 +207,10 @@
   background: #fff;
 }
 
-#virtualclassCont.congrea .linkdocs:hover {
+#virtualclassCont.congrea #listdocs .linkdocs:hover {
   background-color: #fff;
   color: black;
-  border: 1px solid #ddd !important;
+  border: 1px solid #ddd;
   border-radius: 4px;
 }
 
