--- a/css/modules/dbVideo.css
+++ b/css/modules/dbVideo.css
@@ -33,12 +33,6 @@
   border: 1px solid #f1f1f1;
 }
 
-/* #virtualclassCont.congrea  #listdocs .linkdocs .mainpreview { */
-
-/* float : right; */
-
-/* } */
-
 #virtualclassCont.congrea .dbContainer .linkvideo .mainpreview,
 #virtualclassCont.congrea .dbContainer .linkvideo .controlCont {
   cursor: pointer;
@@ -47,8 +41,6 @@
 #virtualclassCont.congrea .linkvideo[data-selected='1'] {
   padding: 2px;
   border-radius: 3px;
-
-  /* background: linear-gradient(to bottom, #595e63 0%, #656a6f 100%); */
   background: linear-gradient(to bottom, #515e69 0%, #34404c 100%);
   color: #fff;
   text-align: center;
@@ -103,10 +95,6 @@
   background: #fff;
   border-radius: 3px;
   height: 50px;
-
-  /* margin-left:35px; */
-
-  /* display:inline-block; */
   padding: 8px;
 }
 
@@ -145,24 +133,10 @@
 #virtualclassCont.congrea #listvideo .linkvideo.links .controls.status[data-status="0"] {
   float: left;
   font-size: 0;
-  margin: -5px 1px 3px 0;
+  margin: -5px 1px 3px 16px;
   height: 20px;
   padding-top: 2px;
 }
-
-/* #virtualclassCont.congrea #listvideo .linkvideo.links .controls.delete { */
-
-/* float: left; */
-
-/* font-size: 0px; */
-
-/* margin: -2px 3px 0 3px; */
-
-/* height: 20px; */
-
-/* padding-top:2px; */
-
-/* } */
 
 #virtualclassCont #listvideo .linkvideo {
   padding: 2px;
@@ -202,22 +176,9 @@ input[type="reset"] {
   padding: 0.875rem 1.78125rem;
 }
 
-/* #virtualclassCont .dashboardview #urlcontainer #presentationurl{ */
-
-/* height: 46px;  width:300px; */
-
-/* font-size: 14px; */
-
-/* } */
 #virtualclassCont #urlcontainer #presentationurl {
   vertical-align: top;
 }
-
-/* #virtualclassCont .dashboardview #urlcontainer{ */
-
-/* margin-top:10px; */
-
-/* } */
 
 #virtualclassCont.congrea #VideoDashboard .dashboardview {
   width: 85%;
@@ -255,26 +216,11 @@ input[type="reset"] {
   margin: 0 auto;
 }
 
-/* #virtualclassCont.congrea #videoUrlContainer { */
-
-/* width:100%; */
-
-/* height:100%; */
-
-/* } */
 #virtualclassCont #congreavideoContBody .qq-uploader-selector.qq-uploader {
   width: 100%;
   height: 80vh;
   max-height: 80vh;
 }
-
-/* #virtualclassCont.congrea #videoUrlContainer #submitURL:hover { */
-
-/* background-color: #4c4c4c; */
-
-/* background-image: none; */
-
-/* } */
 
 #videoUrlContainer {
   z-index: 40;
@@ -337,9 +283,6 @@ input[type="reset"] {
   font-family: 'icomoon';
 }
 
-/* #virtualclassCont.congrea #VideoDashboard .controlCont {
-  /* display:none; */
-
 #virtualclassCont.congrea #VideoDashboard .controlCont.showCtr {
   display: block;
 }
@@ -386,25 +329,12 @@ input[type="reset"] {
   width: 200px;
 }
 
-/* @media (min-width: 1270px) { */
-
-/* #virtualclassCont.congrea #congreaShareVideoUrlCont #uploadBtnCont .btn-default { */
-
-/* width: 200px; */
-
-/* } */
-
-/* } */
-
 #virtualclassCont.congrea #congreavideoContBody .qq-uploader.qq-gallery {
   border-radius: 0;
   border: 0;
 }
 
 #virtualclassCont.congrea #VideoDashboard #congreaShareVideoUrlCont #uploadBtnCont #uploadVideo {
-  /* border-top: none; */
-
-  /* border-right: none; */
   border-width: 0;
   border: 0;
   border-radius: 4px;
@@ -490,7 +420,7 @@ input[type="reset"] {
 }
 
 #virtualclassCont.congrea #listvideo .linkvideo .controlCont .controls {
-  margin-left: 16px !important;
+  margin-left: 16px;
 }
 
 #virtualclassCont.congrea #listvideo .linkvideo {
@@ -503,16 +433,6 @@ input[type="reset"] {
 
 #virtualclassCont.congrea #listvideo .linkvideo:hover {
   background-color: #efefef;
-
-  /* -webkit-transform:scale(1.008); */
-
-  /* -moz-transform:scale(1.008); */
-
-  /* -ms-transform:scale(.9); */
-
-  /* -o-transform:scale(.9); */
-
-  /*  transform:scale(1.0005); */
 }
 
 #virtualclassCont.congrea #listvideo .linkvideo:nth-child(odd) {
@@ -604,7 +524,7 @@ input[type="reset"] {
 #virtualclassCont.congrea #listvideo .linkvideo.links .controls.delete {
   float: left;
   font-size: 0;
-  margin: -6px 1px 1px -3px;
+  margin: -6px 1px 1px 13px;
   height: 20px;
   padding-top: 4px;
 }
