--- a/css/modules/jquery.ui.chatbox.css
+++ b/css/modules/jquery.ui.chatbox.css
@@ -257,6 +257,14 @@
   -webkit-box-orient: vertical;
 }
 
+#virtualclassCont.congrea #stickybar #tabs ul li .ui-tabs-anchor {
+  display: none;
+}
+
+#virtualclassCont.congrea #stickybar #tabs ul li a .icon-minus {
+  display: none;
+}
+
 #virtualclassCont.congrea #closebtn {
   border: 0;
   width: 40px;
@@ -824,12 +832,6 @@
   opacity: 0.4;
 }
 
-#virtualclassCont.congrea .ui-state-default .ui-tabs-anchor,
-#virtualclassCont.congrea .ui-state-default a.ui-corner-all,
-#virtualclassCont.congrea .ui-state-default .icon-minus {
-  display: none !important;
-}
-
 #virtualclassCont.congrea .chat_enabled #memlist.enable {
   display: block;
 }
@@ -862,14 +864,6 @@
 
 #virtualclassCont.congrea .chat_enabled #chatrm.enable {
   display: block;
-}
-
-#virtualclassCont.congrea #chatrm.disable {
-  display: none !important;
-}
-
-#virtualclassCont.congrea #memlist.disable {
-  display: none !important;
 }
 
 #virtualclassCont.congrea #ta_chrm2 {
